--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,14 @@
 <html>
-<head>
-    <title>django blog</title>
-</head>
 <body>
 <div>
-    <h1><a href="">django blog</a></h1>
+    <h1><a href="/">Django Blog page</a></h1>
 </div>
+{% for post in posts %}
 <div>
-    <p>published: 14.06</p>
-    <h2><a href ="">post1 </a></h2>
+    <p>published : {{ post.published_date}}</p>
+    <h1><a href="">{{post.title}}</a></h1>
+    <p>{{post.text|linebreaksbr}}</p>
 </div>
-<div>
-    <p>seconded: 14.06</p>
-    <h2><a href="">post2</h2>
-</div>
+{% endfor %}
 </body>
 </html>
